# IsoFATE

./: .gitignore  README.md  animated_figures.md  atmodeller_coupler_public.py  constants.py  isofate_public.py  isofate_ternary.py  isofate_ternary_public.py  isofunks.py  isofunks_coupler_public.py  orbit_params.py  pyproject.toml  setup.py  tutorial.ipynb
.github/: pull_request_template.md
IsoFATE/: __init__.py  atmodeller_coupler.py  constants.py  debug_sim.py  isofate_coupler.py  isofunks.py  isoplot.py  melt_fraction_grid.npz  orbit_params.py  test_Fxuv.py  test_isocalc.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree  isocalcs.doctree  isofate_coupler.doctree  isofunks.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  isocalcs.html  isofate_coupler.html  isofunks.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: isofate_coupler.rst.txt  isofunks.rst.txt
docs/_build/html/_static/: documentation_options.js
isofate/: atmodeller_coupler.py  constants.py  isofate_MCMC.py  isofate_MCMC_plot.py  isofate_MCMC_v2.py  isofate_coupler.py  isofunks.py  isoplot.py  orbit_params.py  sim.py  test_Fxuv.py  test_isocalc.py
isofate_temp/: animated_figures.md  isofate_coupler.py  isofunks.py  requirements.txt  sim.py
tests/: test_Fxuv.py
version1/: santiago1.py
version2/: atmodeller_coupler.py  constants.py  isofate_coupler.py  isofunks.py  maddy.txt  sim.py
