[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isofate"
version = "0.1.1"
requires-python = ">=3.11"

dependencies = [
 "numpy==2.3",
 "scipy==1.16.1",
 "matplotlib==3.10.0",
 "atmodeller>=0.7.0",
 "optimistix==0.0.10"
]

[tool.setuptools.packages.find]
where = ["."] 
include = ["isofate*"]

[tool.setuptools.package-data]
isofate = ["data/**/*"]

#[tool.setuptools]
#include-package-data = true